package events

import (
	"context"

	types "code.vegaprotocol.io/vega/proto"
	eventspb "code.vegaprotocol.io/vega/proto/events/v1"
)

type TxErr struct {
	*Base
	evt *eventspb.TxErrorEvent
}

func NewTxErrEvent(ctx context.Context, err error, partyID string, tx interface{}) *TxErr {
	evt := &TxErr{
		Base: newBase(ctx, TxErrEvent),
		evt: &eventspb.TxErrorEvent{
			PartyId: partyID,
			ErrMsg:  err.Error(),
		},
	}
	switch tv := tx.(type) {
	case *types.Proposal:
		cpy := *tv
		evt.evt.Transaction = &eventspb.TxErrorEvent_Proposal{
			Proposal: &cpy,
		}
	case types.Proposal:
		evt.evt.Transaction = &eventspb.TxErrorEvent_Proposal{
			Proposal: &tv,
		}
	case *types.VoteSubmission:
		cpy := *tv
		evt.evt.Transaction = &eventspb.TxErrorEvent_Vote{
			Vote: &cpy,
		}
	case types.Vote:
		evt.evt.Transaction = &eventspb.TxErrorEvent_Vote{
			Vote: &tv,
		}
	case *types.OrderSubmission:
		cpy := *tv
		evt.evt.Transaction = &eventspb.TxErrorEvent_OrderSubmission{
			OrderSubmission: &cpy,
		}
	case types.OrderSubmission:
		evt.evt.Transaction = &eventspb.TxErrorEvent_OrderSubmission{
			OrderSubmission: &tv,
		}
	case *types.OrderCancellation:
		cpy := *tv
		evt.evt.Transaction = &eventspb.TxErrorEvent_OrderCancellation{
			OrderCancellation: &cpy,
		}
	case types.OrderCancellation:
		evt.evt.Transaction = &eventspb.TxErrorEvent_OrderCancellation{
			OrderCancellation: &tv,
		}
	case *types.OrderAmendment:
		cpy := *tv
		evt.evt.Transaction = &eventspb.TxErrorEvent_OrderAmendment{
			OrderAmendment: &cpy,
		}
	case types.OrderAmendment:
		evt.evt.Transaction = &eventspb.TxErrorEvent_OrderAmendment{
			OrderAmendment: &tv,
		}
	case *types.LiquidityProvisionSubmission:
		cpy := *tv
		evt.evt.Transaction = &types.TxErrorEvent_LiquidityProvisionSubmission{
			LiquidityProvisionSubmission: &cpy,
		}
	case types.LiquidityProvisionSubmission:
		evt.evt.Transaction = &types.TxErrorEvent_LiquidityProvisionSubmission{
			LiquidityProvisionSubmission: &tv,
		}
	}
	return evt
}

func (t TxErr) IsParty(id string) bool {
	return t.evt.PartyId == id
}

func (t TxErr) Proto() eventspb.TxErrorEvent {
	return *t.evt
}

func (t TxErr) StreamMessage() *eventspb.BusEvent {
	return &eventspb.BusEvent{
		Id:    t.eventID(),
		Block: t.TraceID(),
		Type:  t.et.ToProto(),
		Event: &eventspb.BusEvent_TxErrEvent{
			TxErrEvent: t.evt,
		},
	}
}
